--- a/parser/Cargo.toml
+++ b/parser/Cargo.toml
@@ -53,6 +53,10 @@ serde = { version = "1.0", features = ["derive"], optional = true }
 self-rust-tokenize = { version = "0.3", optional = true }
 source-map = { version = "0.15", features = ["serde-serialize", "self-rust-tokenize"] }
 
+[target.'cfg(target_family = "wasm")'.dependencies]
+tsify = "0.4.5"
+wasm-bindgen = "0.2"
+
 [dev-dependencies]
 pretty_assertions = "1.3.0"
 match_deref = "0.1.1"
