--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -2,13 +2,14 @@ name: Rust
 
 # Contains checks:
 # - That the code compiles
-# - That the code complies with formatting
-# - Lints (using clippy) to find errors
-# - That crates that are published are publish-able (works most of the time)
+# - That the code and markdown complies with formatting
+# - Lints (using clippy) to find *issues*
+# - That crates that are published are publish-able
 # - Testing 
-#   - Standard Rust integration and unit tests
-#   - Fuzz tests (parser and checker)
-#   - WASM edition works tests
+#   - Standard Rust integration, unit tests and specification tests
+#   - (if main, not draft PR or 'fuzz-me' label) Fuzz tests (parser and checker)
+#   - That the WASM edition works and types are ok
+# - (if main or 'compiler-performance') spins off the performance-and-size tests
 
 on:
   push:
@@ -24,8 +25,6 @@ env:
     ~/.cargo/registry/cache/
     ~/.cargo/git/db/
     target/
-    checker/fuzz/target
-    parser/fuzz/target
 
 jobs:
   validity:
@@ -77,7 +76,7 @@ jobs:
       - name: Install spectra
         uses: kaleidawave/release-downloader@improvements
         with:
-          items: kaleidawave/experiments[spectra]
+          items: kaleidawave/experiments@assets[spectra]
 
       - uses: dorny/paths-filter@v3
         id: changes
@@ -167,6 +166,8 @@ jobs:
       - name: Build and test WASM
         if: github.ref_name == 'main' || !github.event.pull_request.draft
         timeout-minutes: 5
+        working-directory: src/js-cli-and-library
+        shell: bash
         run: |
           # TODO `cargo check --target wasm32-unknown-unknown --lib` might be good enough
 
@@ -181,15 +182,9 @@ jobs:
 
           npx -p typescript tsc --strict --pretty ./build/ezno_lib.d.ts
           echo "debug checked with TSC"
+
+          # TEMP check
           cargo run -p ezno-parser --example parse ./build/ezno_lib.d.ts --type-definition-module
-          
-          # TODO temp as the types generated can be a bit unpredicatible
-          if ${{ contains(fromJSON('["main", "ast-typegen-direct"]'), github.ref_name ) }}; then
-            npm run build-release
-            npx -p typescript tsc --strict --pretty ./build/ezno_lib.d.ts
-          fi
-        working-directory: src/js-cli-and-library
-        shell: bash
 
       # WIP
       - uses: actions/upload-artifact@v4
@@ -215,6 +210,7 @@ jobs:
       - uses: dtolnay/rust-toolchain@nightly
       - uses: actions/cache@v4
         with:
+          # TODO fuzz specific key & paths
           path: ${{ env.CACHE_PATHS }}
           key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
       
@@ -231,8 +227,8 @@ jobs:
               - 'parser/**'
       
       - name: Run fuzzing
-        env:
-          SHORT_CIRCUIT: true
+        # env:
+        #   SHORT_CIRCUIT: true
         if: steps.changes.outputs.parser == 'true'
         run: |
           CARGO_TARGET_DIR=../../target cargo fuzz run -s none ${{ matrix.fuzz-target }} -- -timeout=10 -use_value_profile=1 -max_total_time=120
@@ -252,7 +248,6 @@ jobs:
     needs: validity
 
     runs-on: ubuntu-latest
-
     timeout-minutes: 15
 
     # TODO
@@ -267,6 +262,7 @@ jobs:
       - uses: dtolnay/rust-toolchain@nightly
       - uses: actions/cache@v4
         with:
+          # TODO fuzz specific key & paths
           path: ${{ env.CACHE_PATHS }}
           key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
 
@@ -283,8 +279,6 @@ jobs:
               - 'checker/**'
 
       - name: Run fuzzing
-        env:
-          SHORT_CIRCUIT: true
         if: steps.changes.outputs.checker == 'true'
         run: cargo fuzz run -s none ${{ matrix.fuzz-target }} -- -timeout=10 -use_value_profile=1 -max_total_time=120
         working-directory: checker/fuzz
@@ -300,23 +294,9 @@ jobs:
         with:
           path: ${{ env.CACHE_PATHS }}
           key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+
       - name: Lint code with clippy
         run: cargo clippy
-
-  # work_in_progress:
-  #   needs: validity
-  #   runs-on: ubuntu-latest
-  #   if: github.ref_name != 'main' && !github.event.pull_request.draft
-  #   timeout-minutes: 30
-  #   steps:
-  #     - uses: actions/checkout@v4
-  #     - uses: brndnmtthws/rust-action-cargo-binstall@v1
-  #       with:
-  #         packages: ripgrep
-  #     - name: Check for TODO comments
-  #       # TODO can we label these somehow?
-  #       run: | 
-  #         rg '(TODO|todo\!|#\[ignore\]|dbg\!)'
 
   publish-ability:
     runs-on: ubuntu-latest
@@ -344,8 +324,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: validity
     steps:
-      - name: Kick off other workflow if the PR has a label
+      - name: Kick off other workflow if main or a PR with 'compiler-performance' label
         if: github.ref_name == 'main' || contains(github.event.pull_request.labels.*.name, 'compiler-performance')
-        run: gh workflow run performance-and-size.yml --ref "${{ github.head_ref }}"
+        run: gh workflow run performance-and-size.yml --ref "${{ github.head_ref }}" -R kaleidawave/ezno
         env:
           GH_TOKEN: ${{ github.token }}
